--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 
     {%- include footer.html -%}
 
+    <link rel="stylesheet" href="{{ "/assets/css/custom.css" | relative_url }}">
   </body>
 
 </html>
